fix mobile intro button overflow

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -17,6 +17,7 @@
     font-weight: 300;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
+    white-space: nowrap;
 
     &:hover{
         $color: $accent;
